--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="display_small">#000000</color>
+    <color name="bar_color">#FFFFFFFF</color>
     <color name="text_medium">#FF4E4B66</color>
     <color name="text_title">#000000</color>
     <color name="body">#4E4B66</color>
